<resources>
    <string name="app_name">AppOfTheYear</string>
    <string name="btnStart">start</string>
    <string name="ageVal">Age</string>
    <string name="nameVal">Name</string>
  <string name="appName">Zalirin</string>
  <string name="fillName">Name</string>
  <string name="appTitle">Random Name</string>
  <string name="hintName">Name</string>
  <string name="hintAge">Age</string>
  <string name="playBtn">Play</string>
  <string name="chGame">Choose Game</string>
  <string name="answerHint">Answer</string>
  <string name="anagramQuestion">Solve the anagram to advance to the next stage!</string>
  <string name="nextAna">next</string>
  <string name="nameRS">Runescape</string>
  <string name="gameHang">Hangman</string>
  <string name="gameGuess">word guess</string>
  <string name="gameAna">Anagram</string>
  <string name="hangmanDesc">Guess the letters before it\'s too late!</string>
  <string name="backBtn">back</string>
  <string name="hangmanRules">Raad het juiste woord before its late!</string>
  <string name="welcomeText">Welcome to Zalirin, after pressing Start, choose your game mode and preferd game to start the quiz!</string>
  <string name="picBtn">Take pic</string>
  <string name="hinting">Hint:</string>
  <string name="todotxt">TODO</string>
</resources>
