<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/firstmenu"


  >

  <TextView
    android:id="@+id/gameTitle"
    android:layout_width="353dp"
    android:layout_height="125dp"
    android:layout_alignParentStart="true"
    android:layout_alignParentTop="true"
    android:layout_centerHorizontal="true"
    android:layout_marginStart="21dp"
    android:layout_marginTop="21dp"
    android:fontFamily="monospace"
    android:lineSpacingExtra="10sp"
    android:text="@string/appName"
    android:textAlignment="center"
    android:textAllCaps="false"
    android:textAppearance="@style/TextAppearance.AppCompat.Title"
    android:textColor="@color/colorPrimaryDark"
    android:textColorHighlight="@color/colorAccent"
    android:textColorHint="@color/colorAccent"
    android:textColorLink="@color/colorAccent"
    android:textSize="50sp"
    android:textStyle="normal|bold"
    />

    <Button
        android:id="@+id/play"
        android:layout_centerHorizontal="true"
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:layout_below="@id/gameTitle"
        android:text="@string/playBtn" />

    <Button
        android:id="@+id/game"
        android:layout_centerHorizontal="true"
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:layout_below="@id/play"
        android:layout_marginTop="30dp"
        android:text="@string/chGame" />

    <Button
        android:id="@+id/mode"
        android:layout_centerHorizontal="true"
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:layout_below="@id/game"
        android:layout_marginTop="30dp"
        android:text="Choose Mode" />
</RelativeLayout>
