<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
  xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@drawable/firstmenu"


  >

  <TextView
    android:id="@+id/gameTitle"
    android:layout_width="353dp"
    android:layout_height="125dp"
    android:layout_alignParentStart="true"
    android:layout_alignParentTop="true"
    android:layout_centerHorizontal="true"
    android:layout_marginStart="21dp"
    android:layout_marginTop="21dp"
    android:fontFamily="monospace"
    android:lineSpacingExtra="10sp"
    android:text="@string/appName"
    android:textAlignment="center"
    android:textAllCaps="false"
    android:textAppearance="@style/TextAppearance.AppCompat.Title"
    android:textColor="@color/colorPrimaryDark"
    android:textColorHighlight="@color/colorAccent"
    android:textColorHint="@color/colorAccent"
    android:textColorLink="@color/colorAccent"
    android:textSize="50sp"
    android:textStyle="normal|bold"
    />

  <TextView
    android:layout_centerHorizontal="true"
    android:layout_below="@id/gameTitle"
    android:layout_marginTop="10dp"
    android:text="@string/anagramQuestion"
    android:textSize="22sp"
    android:layout_width="300dp"
    android:layout_height="60dp" />

  <TextView
    android:id="@+id/anagramBox"
    android:layout_centerHorizontal="true"
    android:layout_below="@id/gameTitle"
    android:layout_marginTop="100dp"
    android:layout_width="170dp"
    android:layout_height="50dp"
    android:background="#FF091238"

    />

  <EditText
    android:id="@+id/anagramInput"
    android:layout_centerHorizontal="true"
    android:layout_below="@id/anagramBox"
    android:layout_marginTop="45dp"
    android:layout_width="170dp"
    android:layout_height="50dp"
    android:background="@android:color/darker_gray"
    android:hint="@string/answerHint"
    android:imeOptions="actionDone"
    android:singleLine="true"
    />

  <TextView
    android:id="@+id/correctView"
    android:layout_below="@id/anagramInput"
    android:layout_width="120dp"
    android:layout_height="50dp"
    android:layout_marginTop="60dp"
    />
  <TextView
    android:id="@+id/wrongView"
    android:layout_below="@id/correctView"
    android:layout_width="120dp"
    android:layout_height="50dp"
    android:layout_marginTop="10dp"
    />
<Button
  android:id="@+id/nextBtn"
  android:layout_below="@id/anagramInput"
  android:layout_marginHorizontal="282dp"
  android:layout_marginTop="100dp"
  android:layout_width="90dp"
  android:layout_height="50dp"
  android:text="@string/nextAna"
  />

  <TextView
    android:id="@+id/currentGame"
    android:layout_below="@id/anagramInput"
    android:layout_marginHorizontal="210dp"
    android:layout_marginTop="29dp"
    android:layout_width="170dp"
    android:layout_height="50dp"
    android:text="Game: yeehaw"
    android:textSize="21sp"
    />




















</RelativeLayout>
