<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@drawable/firstmenu"


  tools:ignore="ExtraText">

  <TextView
    android:id="@+id/gameTitle"
    android:layout_width="353dp"
    android:layout_height="70dp"
    android:layout_alignParentStart="true"
    android:layout_alignParentTop="true"
    android:layout_centerHorizontal="true"
    android:layout_marginStart="21dp"
    android:layout_marginTop="21dp"
    android:fontFamily="monospace"
    android:lineSpacingExtra="10sp"
    android:text="@string/appName"
    android:textAlignment="center"
    android:textAllCaps="false"
    android:textAppearance="@style/TextAppearance.AppCompat.Title"
    android:textColor="@color/colorPrimaryDark"
    android:textColorHighlight="@color/colorAccent"
    android:textColorHint="@color/colorAccent"
    android:textColorLink="@color/colorAccent"
    android:textSize="50sp"
    android:textStyle="normal|bold"
    />

  <TextView
    android:id="@+id/hangmanDescription"
    android:layout_centerHorizontal="true"
    android:layout_below="@id/gameTitle"
    android:text="@string/hangmanRules"
    android:textSize="18sp"
    android:layout_width="300dp"
    android:layout_height="60dp"
    android:background="#000"/>

  <TextView
    android:id="@+id/Letter1"
    android:background="#FFFF"
    android:layout_height="30dp"
    android:layout_width="18dp"
    android:layout_below="@id/gameTitle"
    android:layout_marginLeft="50dp"
    android:layout_marginTop="25dp"
    android:text=""
    android:textColor="#000"
    android:textSize="20dp"

    />

  <TextView
    android:id="@+id/Letter2"
    android:background="#FFFF"
    android:layout_height="30dp"
    android:layout_width="18dp"
    android:layout_below="@id/gameTitle"
    android:layout_marginLeft="80dp"
    android:layout_marginTop="25dp"
    android:text=""
    android:textColor="#000"
    android:textSize="20dp"

    />


  <TextView
    android:id="@+id/Letter3"
    android:background="#FFFF"
    android:layout_height="30dp"
    android:layout_width="18dp"
    android:layout_below="@id/gameTitle"
    android:layout_marginLeft="110dp"
    android:layout_marginTop="25dp"
    android:text=""
    android:textColor="#000"
    android:textSize="20dp"

    />
  <TextView
    android:id="@+id/Letter4"
    android:background="#FFFF"
    android:layout_height="30dp"
    android:layout_width="18dp"
    android:layout_below="@id/gameTitle"
    android:layout_marginLeft="140dp"
    android:layout_marginTop="25dp"
    android:text=""
    android:textColor="#000"
    android:textSize="20dp"

    />
  <TextView
    android:id="@+id/Letter5"
    android:background="#FFFF"
    android:layout_height="30dp"
    android:layout_width="18dp"
    android:layout_below="@id/gameTitle"
    android:layout_marginLeft="170dp"
    android:layout_marginTop="25dp"
    android:text=""
    android:textColor="#000"
    android:textSize="20dp"
    />
  <TextView
    android:id="@+id/Letter6"
    android:background="#FFFF"
    android:layout_height="30dp"
    android:layout_width="18dp"
    android:layout_below="@id/gameTitle"
    android:layout_marginLeft="200dp"
    android:layout_marginTop="25dp"
    android:text=""
    android:textColor="#000"
    android:textSize="20dp"

    />
  <TextView
    android:id="@+id/Letter7"
    android:background="#FFFF"
    android:layout_height="30dp"
    android:layout_width="18dp"
    android:layout_below="@id/gameTitle"
    android:layout_marginLeft="230dp"
    android:layout_marginTop="25dp"
    android:text=""
    android:textColor="#000"
    android:textSize="20dp"
    />
  <TextView
    android:id="@+id/Letter8"
    android:background="#FFFF"
    android:layout_height="30dp"
    android:layout_width="18dp"
    android:layout_below="@id/gameTitle"
    android:layout_marginLeft="260dp"
    android:layout_marginTop="25dp"
    android:text=""
    android:textColor="#000"
    android:textSize="20dp"

    />
  <TextView
    android:id="@+id/Letter9"
    android:background="#FFFF"
    android:layout_height="30dp"
    android:layout_width="18dp"
    android:layout_below="@id/gameTitle"
    android:layout_marginLeft="290dp"
    android:layout_marginTop="25dp"
    android:text=""
    android:textColor="#000"
    android:textSize="20dp"

    />



  <ImageView
    android:id="@+id/hangmanView"
    android:layout_centerHorizontal="true"
    android:layout_below="@id/hangmanDescription"
    android:layout_width="300dp"
    android:layout_height="230dp"
    android:background="#FF091238"
    android:scaleType="centerInside"
    android:src="@drawable/hangmanwin"

    />

  <ImageView
    android:id="@+id/hangmanFirst"
    android:layout_height="400px"
    android:layout_width="300dp"
    android:layout_marginRight="260dp"
    android:layout_marginTop="4dp"
    android:layout_below="@id/hangmanDescription"
    android:layout_centerVertical="true"
    android:src="@drawable/linevert"
    />

  <ImageView
    android:id="@+id/hangmanSecond"
    android:layout_height="400px"
    android:layout_width="165dp"
    android:layout_marginLeft="35dp"
    android:layout_marginBottom="152dp"
    android:layout_above="@id/hangmanInput"
    android:layout_below="@id/gameTitle"
    android:layout_centerVertical="true"
    android:src="@drawable/linehorz"
    />

  <ImageView
    android:id="@+id/hangmanThird"
    android:layout_height="105dp"
    android:layout_width="300dp"
    android:layout_marginLeft="25dp"
    android:layout_marginTop="4dp"
    android:layout_below="@id/hangmanDescription"
    android:layout_centerVertical="true"
    android:src="@drawable/linevert"
    />

  <ImageView
    android:id="@+id/hangmanForth"
    android:layout_height="105dp"
    android:layout_width="60dp"
    android:layout_marginLeft="165dp"
    android:layout_marginTop="50dp"
    android:layout_below="@id/hangmanDescription"
    android:layout_centerVertical="true"
    android:src="@drawable/circleneck"
    />

  <ImageView
    android:id="@+id/hangmanFifth"
    android:layout_height="105dp"
    android:layout_width="60dp"
    android:layout_marginLeft="165dp"
    android:layout_marginTop="1dp"
    android:layout_below="@id/hangmanDescription"
    android:layout_centerVertical="true"
    android:src="@drawable/hangmanskull"

    />

  <EditText
    android:id="@+id/hangmanInput"
    android:layout_below="@id/hangmanView"
    android:layout_marginTop="20dp"
    android:layout_marginHorizontal="20dp"
    android:layout_width="170dp"
    android:layout_height="50dp"
    android:background="@android:color/darker_gray"
    android:hint="@string/answerHint"
    android:imeOptions="actionDone"
    android:singleLine="true"
    />

  <TextView
    android:id="@+id/correctView"
    android:layout_below="@id/hangmanInput"
    android:layout_width="120dp"
    android:layout_height="50dp"
    android:layout_marginTop="60dp"
    android:textSize="22sp"
    />
  <TextView
    android:id="@+id/wrongView"
    android:layout_below="@id/hangmanInput"
    android:layout_marginHorizontal="250dp"
    android:layout_width="80dp"
    android:layout_height="50dp"
    android:layout_marginTop="10dp"
    android:textSize="22sp"

    />
  <Button
    android:id="@+id/nextBtn"
    android:layout_below="@id/hangmanView"

    android:layout_marginTop="20dp"
    android:layout_marginHorizontal="280dp"
    android:layout_width="90dp"
    android:layout_height="50dp"
    android:text="@string/nextAna"
    />

  <Button
    android:id="@+id/backBtn"
    android:layout_below="@id/nextBtn"
    android:layout_marginTop="60dp"
    android:layout_marginHorizontal="280dp"
    android:layout_width="90dp"
    android:layout_height="50dp"
    android:text="@string/backBtn"
    />

  <TextView
    android:id="@+id/SelectedGame"
    android:layout_below="@id/hangmanInput"
    android:layout_marginHorizontal="10dp"
    android:layout_marginTop="10dp"
    android:layout_width="100dp"
    android:layout_height="50dp"
    android:text=""
    android:textSize="21sp"
    />




















</RelativeLayout>
